src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.container {
  background-color: #191622;
  min-height: 100vh;
  color: #67e480;
  padding: 2rem 4rem;
}

.title {
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
  margin-bottom: 2rem;
}

form {
  display: flex;
  align-items: flex-end;
  gap: 2rem;
}

form > div {
  display: grid;
  gap: 0.5rem;
  align-content: end;
}

input,
button {
  outline: 1px solid transparent;
  border: none;
  padding: 0.8rem 1.2rem;
  border-radius: 0.5rem;
  background: #44475a70;
  color: white;
}

button {
  transition: 0.2s;
  cursor: pointer;
  color: #67e480;
}

input:focus,
button:hover {
  outline-color: #67e480;
}

button:hover {
  opacity: 0.8;
}

.games {
  margin-top: 3rem;
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(4, 1fr);
}

.games div {
  display: flex;
  gap: 1rem;
  flex-direction: column;
}

.games div img {
  max-width: 100%;
}

